2012-01-21  Robert Millan  <rmh@gnu.org>
	    Gerald Pfeifer  <gerald@pfeifer.com>

	* config/kfreebsd-gnu.h (GNU_USER_DYNAMIC_LINKERX32): New macro.
	(GNU_USER_DYNAMIC_LINKER): Adjust indentation.

2012-01-20  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/51914
	* tree-vect-stmts.c (vectorizable_conversion): For
	cvt_type && modifier == WIDEN, put temporary with cvt_type
	at the beginning of vec_dsts and set vec_dest to temporary
	with vectype_out.

2012-01-20  Eric Botcazou  <ebotcazou@adacore.com>

	* cfgrtl.c (rtl_dump_bb): Do not dump insns for {ENTRY|EXIT}_BLOCK.

2011-01-20  Tijl Coosemans  <tijl@coosemans.org>

	* config/i386/i386.c: Fix checks for !TARGET_MACHO.
	* config/rs6000/rs6000.c: Likewise.

2012-01-20  Jakub Jelinek  <jakub@redhat.com>

	PR target/51915
	* config/arm/arm.c (arm_count_output_move_double_insns): Call
	output_move_double on a copy of operands array.

2012-01-20   Cary Coutant  <ccoutant@google.com>
	     Dodji Seketeli  <dodji@redhat.com>

	PR debug/45682
	* dwarf2out.c (copy_declaration_context): Return ref to parent
	of declaration DIE, if necessary.
	(remove_child_or_replace_with_skeleton): Add new parameter; update
	caller.  Place skeleton DIE under parent DIE of original declaration.
	Move call to copy_declaration_context to here ...
	(break_out_comdat_types): ... from here.

2012-01-20  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	PR rtl-optimization/51856
	* reload.c (find_reloads_subreg_address): Set the address_reloaded
	flag to reloaded.

2012-01-20  Ramana Radhakrishnan  <ramana.radhakrishnan@linaro.org>

	PR target/51819
	* config/arm/arm.c (arm_print_operand): Correct output of alignment
	hints for neon loads and stores.

2012-01-20  Georg-Johann Lay  <avr@gjlay.de>

	PR target/49868
	PR target/50887
	* doc/extend.texi (Named Address Spaces): Split into subsections.
	(AVR Named Address Spaces): New subsection.
	(M32C Named Address Spaces): New subsection.
	(RL78 Named Address Spaces): New subsection.