@@ -1,3 +1,7 @@
+2012-01-22  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gcc.dg/ext-elim-1.c: New test.
+
 2012-01-22  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	PR target/51931
